# lernGLFW

./: CMakeLists.txt
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: main.cpp
